# aws-secretsmanager-agent

./: .crux_template.md  .dockerignore  .gitignore  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TEST_LABELING.md  deny.toml  test-local.sh
.agents/summary/: .last_commit  architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions-rs/: grcov.yml
.github/workflows/: bench_baseline.yml  benchmarks.yml  codeql.yml  docker.yml  fuzz.yml  integration-tests.yml  rust.yml  test-workflow.yaml
aws_secretsmanager_agent/: .gitignore  Cargo.toml
aws_secretsmanager_agent/configuration/: awssmaseedtoken  awssmaseedtoken.service  awssmastartup.service  install  uninstall
aws_secretsmanager_agent/examples/example-lambda-extension/: secrets-manager-agent-extension.sh
aws_secretsmanager_agent/src/: cache_manager.rs  config.rs  constants.rs  credentials_file_provider.rs  error.rs  lib.rs  logging.rs  main.rs  parse.rs  server.rs  utils.rs
aws_secretsmanager_agent/tests/: secret_retrieval.rs
aws_secretsmanager_agent/tests/common/: mod.rs
aws_secretsmanager_agent/tests/resources/configs/: config_file_anyport.toml  config_file_valid.toml  config_file_with_invalid_config.toml  config_file_with_invalid_contents.toml  config_file_with_invalid_http_address.toml  config_file_with_invalid_log_level.toml  config_file_with_unrecognized_override.toml
aws_secretsmanager_caching/: Cargo.toml  README.md
aws_secretsmanager_caching/benches/: benchmark.rs
aws_secretsmanager_caching/src/: error.rs  lib.rs  output.rs  utils.rs
aws_secretsmanager_caching/src/output/: describe_secret_output.rs  get_secret_value_output.rs  mod.rs
aws_secretsmanager_caching/src/secret_store/: mod.rs
aws_secretsmanager_caching/src/secret_store/memory_store/: cache.rs  mod.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/fuzz_query_parser/: path_style  query_with_version  valid_query
fuzz/corpus/fuzz_token_validator/: file_path  valid_token
fuzz/fuzz_targets/: fuzz_http_api.rs  fuzz_http_server.rs  fuzz_query_parser.rs  fuzz_token_validator.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: cache_behavior.rs  caching.rs  common.rs  configuration.rs  cross_account_access.rs  file_credentials.rs  secret_retrieval.rs  security.rs  version_management.rs
