[package]
name = "aws_secretsmanager_agent"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "The AWS Secrets Manager Agent is a local HTTP service that you can install and use in your compute environments to read secrets from Secrets Manager and cache them in memory."
homepage = "https://github.com/aws/aws-secretsmanager-agent"
repository = "https://github.com/aws/aws-secretsmanager-agent"
readme = "../README.md"

[dependencies]
hyper = { version = "1", features = ["http1", "server"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"]}
bytes = "1"

pretty_env_logger = "0.5"
serde = "1"
serde_json = "1"
serde_derive = "1"
config = "0.14"

aws-config = "1"
aws-sdk-secretsmanager = "1"
aws-smithy-runtime-api = "1"
aws-sdk-sts = "1"
log = "0.4.20"
log4rs = { version = "1.2.0", features = ["gzip"] }
url = "2"
aws_secretsmanager_caching = { version = "1.0.0", path = "../aws_secretsmanager_caching" }

# For unit tests
[dev-dependencies]
hyper = { version = "1", features = ["http1", "server", "client"]}
aws-smithy-runtime = { version = "1", features = ["test-util"] }
tokio = {version = "1", features = ["test-util", "rt-multi-thread", "net", "macros"] }
http = "1.1.0"
aws-smithy-types = "1"
