[package]
name = "aws_secretsmanager_caching"
version = "1.0.0"
edition = "2021"

[dependencies]
aws-sdk-secretsmanager = "1"
aws-smithy-types = "1"
serde_json = "1"
serde_with = "3"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync"] }
linked-hash-map = "0.5.6"

[dev-dependencies]
aws-smithy-mocks-experimental = "0"
aws-smithy-runtime = { version = "1", features = ["test-util"] }
aws-sdk-secretsmanager = { version = "1", features = ["test-util"] }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
http = "0"
