[package]
name = "aws_secretsmanager_caching"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
description = "The AWS Secrets Manager Rust caching client enables in-process caching of secrets for Rust applications."
homepage = "https://github.com/aws/aws-secretsmanager-agent/aws_secretsmanager_caching"
repository = "https://github.com/aws/aws-secretsmanager-agent"
readme = "README.md"

[dependencies]
aws-sdk-secretsmanager = "1"
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
serde_json = "1"
serde_with = "3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }
linked-hash-map = "0.5.6"
aws-config = "1"

[dev-dependencies]
aws-smithy-mocks-experimental = "0"
aws-smithy-runtime = { version = "1", features = ["test-util", "wire-mock"] }
aws-sdk-secretsmanager = { version = "1", features = ["test-util"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "test-util"] }
http = "1"
tokio-test = "0.4.4"
