[package]
name = "aws_secretsmanager_agent-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hyper = { version = "1", features = ["http1", "server"] }
http = "1"
tokio = { version = "1", features = ["rt", "net"] }
urlencoding = "2.1"

[dependencies.aws_secretsmanager_agent]
path = "../aws_secretsmanager_agent"

[[bin]]
name = "fuzz_token_validator"
path = "fuzz_targets/fuzz_token_validator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_http_server"
path = "fuzz_targets/fuzz_http_server.rs"
test = false
doc = false
bench = false
