[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "test-util", "process", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
aws-config = "1"
aws-sdk-secretsmanager = "1"
url = "2"
derive_builder = "0.20"
fastrand = "2"

